--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <input type="email" placeholder="Enter your email address">
         <input type="Password" placeholder="Create password">
         <input type="password" placeholder="Confirm password">
-        <button><a href="successful.html">sign up</a></button>
-        <p>Already have an account? <a href=""><a href="signin.html">sign in</a></p>
+        <button><a href="index4.html">sign up</a></button>
+        <p>Already have an account? <a href=""><a href="index2.html">sign in</a></p>
 
-        <link rel="stylesheet" href="signin.html">
+        <a href="index2.html"></a>
     </form>
 
 </body>
