--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>signnig up</title>
+    <title></title>
     <link rel="stylesheet" href="index3.css">
 </head>
 <body>
